<resources>
    <string name="app_name">Shaastra 2018</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_register">Register a new Account</string>

    <string name="user_login_url">http://shaastra.org:8000/auth/local</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_userProfile">User Profile</string>
    <string name="nav_events">Events</string>
    <string name="nav_workshops">Workshops</string>
    <string name="nav_summit">Summit</string>
    <string name="nav_spotlight">Spotlight</string>
    <string name="nav_show">Shows</string>
    <string name="nav_hospi">Hospitality</string>
    <string name="nav_map">Map</string>
    <string name="nav_spons">Sponsors</string>
    <string name="nav_qr">QR Scanner</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>User Profile</item>
        <item>Events</item>
        <item>Workshops</item>
        <item>Summit</item>
        <item>Spotlight</item>
        <item>Shows</item>
        <item>Hospitality</item>
        <item>Map</item>
        <item>Sponsors</item>
        <item>QR Scanner</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_college">College</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_contact">Contact number</string>
    <string name="prompt_city">City</string>
    <string name="prompt_gender_male">Male</string>
    <string name="prompt_gender_female">Female</string>
    <string name="shaastra_logo_url">http://shaastra.org/images/shaastra-logos/logo-black.png</string>
    <string name="shaastra_user_url">http://shaastra.org:8000/api/users/me</string>
</resources>
