<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/divider_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home">
        </item>
    </group>

   <group android:checkableBehavior="single"
       android:id="@+id/divider_user">
       <item
           android:id="@+id/nav_userprofile"
           android:icon="@drawable/ic_person_black_24dp"
           android:title="@string/nav_userProfile">
       </item>

   </group>

    <item android:title="Shaastra">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/divider_shaastra">
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_event_black_24dp"
                    android:title="@string/nav_events" />
                <item
                    android:id="@+id/nav_workshops"
                    android:icon="@drawable/ic_extension_black_24dp"
                    android:title="@string/nav_workshops" />
                <item
                    android:id="@+id/nav_summit"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/nav_summit" />
                <item
                    android:id="@+id/nav_spotlight"
                    android:icon="@drawable/ic_whatshot_black_24dp"
                    android:title="@string/nav_spotlight" />
                <item
                    android:id="@+id/nav_shows"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/nav_show" />

                <item
                    android:id="@+id/nav_hospitality"
                    android:icon="@drawable/ic_group_black_24dp"
                    android:title="@string/nav_hospi" />

                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_place_black_24dp"
                    android:title="@string/nav_map" />

                <item
                    android:id="@+id/nav_sponsors"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/nav_spons" />

            </group>
        </menu>
    </item>


    <item android:title="others">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/divider_others">
                <item
                    android:id="@+id/nav_qrscanner"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_qr">
                </item>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/nav_logout">
                </item>
            </group>

        </menu>
    </item>

</menu>
